fix(components/molecule/progressSteps): add styles to allows a visible overflow in fluid container

--- a/components/molecule/progressSteps/src/styles/index.scss
+++ b/components/molecule/progressSteps/src/styles/index.scss
@@ -129,11 +129,13 @@ $content-class: '#{$base-class}-content';
     }
 
     &--fluid {
+      display: inherit;
+      overflow: inherit;
       #{$content-class}-item {
         display: none;
 
         &--active {
-          display: flex;
+          display: inherit;
         }
       }
     }
